--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Day</title>
     <link rel="shortcut icon" type="image/png" href="/images/17288166.png" />
     <link
@@ -82,14 +83,15 @@
                   placeholder="Add your task"
                   class="colorbtn input__task"
                 />
-                <input
+                <div><input
                   type="number"
                   class="input__number colorbtn"
                   placeholder="nº of pomodoros"
                   max="12"
                   min="0"
                 />
-                <button id="button-add" class="colorbtn">Add</button>
+                <button id="button-add" class="colorbtn">Add</button></div>
+                
               </div>
               <ul class="list-container"></ul>
             </div>
