mouseover button events

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
             <div class="timer box border-box">
               <p>Pomodoro timer</p>
               <p class="timerDisplay">25:00</p>
-              <button for="timer" class="timer-button colorbtn">Start</button>
-              <button for="timer" class="pause-button colorbtn">Pause</button>
-              <button for="timer" class="reset-button colorbtn">
+              <button for="timer" class="timer-button colorbtn pressbtn">Start</button>
+              <button for="timer" class="pause-button colorbtn pressbtn">Pause</button>
+              <button for="timer" class="reset-button colorbtn pressbtn">
                 Reset Timer
               </button>
             </div>
             <div class="pomodoro-counter-box box border-box">
               <div class="counter-title">Total Counter <br /></div>
               <div class="pomodoro-counter"></div>
-              <button class="colorbtn counter-button">Reset Total</button>
+              <button class="colorbtn counter-button pressbtn">Reset Total</button>
             </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
                   max="12"
                   min="0"
                 />
-                <button id="button-add" class="colorbtn">Add</button></div>
+                <button id="button-add" class="colorbtn pressbtn">Add</button></div>
                 
               </div>
               <ul class="list-container"></ul>
